syntax = "proto3";

package worker_servers.grpc_packages;

message mapper_request {
    repeated string lines = 1;
}

message tuple {
    string key = 1;
    string value = 2;
}

message tuple_list {
    repeated tuple result =1;
}

message mapper_response {
    repeated tuple result = 1;
}

message ping_request {
    string data = 1;
}

message ping_response {
    string data = 1;
}

message reducer_response {
    repeated tuple result = 1;
}

message reducer_request {
    repeated tuple result = 1;
}

service Worker {

    rpc ping(ping_request) returns (ping_response) {} 
    rpc worker_map(mapper_request) returns (mapper_response) {}
    rpc worker_reducer(tuple_list) returns (reducer_response) {}
}
